Add about section

--- a/index.html
+++ b/index.html
@@ -13,29 +13,75 @@
 	<title>Portfolio</title>
 </head>
 <body>
-	<header class="background-header">
-		<div class="flex-container div-name-header">
-			<h1>etienne <span class="uppercase specs-bold-400">blanc-coquand</span></h1>
+	<header id="header" class="background-header">
+		<div class="flex-container-space-between div-name-header">
+			<h1><span class="underscore">etienne</span><span class="uppercase specs-bold-400"> blanc-coquand</span></h1>
+			<img class="cheese" src="imgs/cheese.svg" alt="cheese">
 		</div>
 		<nav class="flex-container-center">
 			<ul class="flex-container-center list-no-style uppercase">
-				<li class="border-li"><a href="#">Accueil</a></li>
-				<li class="border-li"><a href="#">Présentation</a></li>
-				<li class="border-li"><a href="#">Compétences</a></li>
-				<li class="border-li"><a href="#">Expériences</a></li>
-				<li><a href="#">Contact</a></li>
+				<li class="border-li scroll hvr-underline-from-left"><a href="#header">Accueil</a></li>
+				<li class="border-li scroll hvr-underline-from-left"><a href="#presentation">Présentation</a></li>
+				<li class="border-li scroll hvr-underline-from-left"><a href="#competences">Compétences</a></li>
+				<li class="border-li scroll hvr-underline-from-left"><a href="#experiences">Expériences</a></li>
+				<li class="scroll hvr-underline-from-left"><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
 		<div class="flex-container-center div-catchphrase">
-			<h2>Je suis <span id="word" class="uppercase specs-bold-700">un développeur</span></h2>
+			<h2 class="specs-bold-100">Je suis <span id="word" class="uppercase specs-bold-700">dynamique</span></h2>
 		</div>
 	</header>
 	<div class="separator-naked"></div>
 	<main>
-		<section class="flex-container-center flex-section">
-			<p>Content</p>
+		<section id="presentation">
+			<div class=" flex-container-left flex-wrap">
+				<h2 class="uppercase size-1 underscore">Faisons connaissance</h2>
+				<div class="text-presentation">
+				<h3 ><strong >ETIENNE Blanc-Coquand</strong >, Developpeur</h3 >
+				<p >Bonjour et bienvenue sur ma page de présentation.
+					<br >Je me présente, Etienne Blanc-Coquand, j'ai 20 ans, je viens des montagnes de la Savoie,
+					paradis du ski et du snowboard, j'ai commencé ma plongée dans l'inconnu de
+					l'informatique par un bac professionnel SEN à Saint-Jean-de-Maurienne où j'ai appris la base de
+					l'informatique en général et où je me suis spécialisé dans les réseaux, télécommunications,
+					audiovisuel et alarmes durant 3 ans.
+					<br >Suite à cela j'ai enchainé mes études sur un BTS SIO option SLAM à Grenoble où je me suis
+					spécialisé dans la programmation logicielle et web durant 2 ans.
+					<br >Dorénavent je suis mes envies, après avoir vu le plus de choses en informatique durant 5 ans,
+					je sais que je veux faire de développeur web mon métier, c'est pour cela que je vais faire des
+					études sur Lyon pour décrocher un diplôme de Développeur Web Fullstack sur 2 ans.
+					<br >Ce qui m'attire plus particulièrement dans ce domaine c'est le fait que tout se réinvente et
+					s'améliore avec le temps, de toujours apprendre et de toujours être surpris par les avancées.
+					<br >
+					<br >Je vous souhaite une agréable visite.</p >
+					<ul >
+						<li >Nom : BLANC-COQUAND Etienne</li >
+						<li >Mail : <a href="mailto:etienne1296pro@gmail.com" >etienne1296pro@gmail.com</a ></li >
+						<li >Tel : +33 (0)6 44 81 42 27</li >
+					</ul >
+				</div>
+				</div>
+			</section>
+<!-- 		<div class="flex-container">
+			<div class="flex-container separator-img1"></div>
+		</div> -->
+		<section id="competences">
+			
+		</section>
+<!-- 		<div class="flex-container">
+			<div class="flex-container-center separator-img2"></div>
+		</div> -->
+		<section id="experiences">
+			
+		</section>
+<!-- 		<div class="flex-container">
+			<div class="flex-container-center separator-img3"></div>
+		</div> -->
+		<section id="contact">
+			
 		</section>
 	</main>
+
+	<div class="separator-naked"></div>
 	<footer class="flex-container-center">
 		<small class="flex-container-center">Copyright© 2017 Etienne Blanc-Coquand</small>
 	</footer>
